// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Loader default 1`] = `
<DocumentFragment>
  <div
    aria-busy="true"
    class="Loader-loader Loader-loaderIndeterminate"
    data-component-name="Loader"
    role="progressbar"
    style="background-size: 40%;"
    title="Please wait"
  />
</DocumentFragment>
`;

exports[`Loader determinate 1`] = `
<DocumentFragment>
  <div
    aria-busy="true"
    class="Loader-loader Loader-loaderDeterminate"
    data-component-name="Loader"
    role="progressbar"
    style="background-size: 0px;"
    title="Please wait"
  />
</DocumentFragment>
`;

exports[`Loader determinate with progress prop 1`] = `
<DocumentFragment>
  <div
    aria-busy="true"
    class="Loader-loader Loader-loaderDeterminate"
    data-component-name="Loader"
    role="progressbar"
    style="background-size: 42%;"
    title="Please wait"
  />
</DocumentFragment>
`;

exports[`Loader indeterminate 1`] = `
<DocumentFragment>
  <div
    aria-busy="true"
    class="Loader-loader Loader-loaderIndeterminate"
    data-component-name="Loader"
    role="progressbar"
    style="background-size: 40%;"
    title="Please wait"
  />
</DocumentFragment>
`;

exports[`Loader with Custom Class Name 1`] = `
<DocumentFragment>
  <div
    aria-busy="true"
    class="Loader-loader myTestClass Loader-loaderIndeterminate"
    data-component-name="Loader"
    role="progressbar"
    style="background-size: 40%;"
    title="Please wait"
  />
</DocumentFragment>
`;

exports[`Loader with delay 1`] = `<DocumentFragment />`;
